--- a/homework3.html
+++ b/homework3.html
@@ -103,6 +103,7 @@
         }
         .visit-btn:hover {
             border: 1px solid #1a64d6;
+            transform: 0.5s;
         }
         .author{
             font-size: 15px;
